teknologkoren_se/static/css/style.css
@font-face {
  font-family: 'Lato Heavy';
  src: url('/static/fonts/lato/LatoLatin-Heavy.woff2') format('woff2'),
       url('/static/fonts/lato/LatoLatin-Heavy.woff') format('woff');
  font-style: normal;
  font-weight: normal;
  font-display: swap;
  text-rendering: optimizeLegibility;
}

@font-face {
  font-family: 'Lato Heavy';
  src: url('/static/fonts/lato/LatoLatin-HeavyItalic.woff2') format('woff2'),
       url('/static/fonts/lato/LatoLatin-HeavyItalic.woff') format('woff');
  font-style: italic;
  font-weight: normal;
  font-display: swap;
  text-rendering: optimizeLegibility;
}

@font-face {
  font-family: 'EB Garamond';
  src: url('/static/fonts/ebgaramond/EBGaramond12-Regular.woff2') format('woff2'),
       url('/static/fonts/ebgaramond/EBGaramond12-Regular.woff') format('woff');
  font-style: normal;
  font-weight: normal;
  font-display: swap;
  text-rendering: optimizeLegibility;
}

@font-face {
  font-family: 'EB Garamond';
  src: url('/static/fonts/ebgaramond/EBGaramond12-Italic.woff2') format('woff2'),
       url('/static/fonts/ebgaramond/EBGaramond12-Italic.woff') format('woff');
  font-style: italic;
  font-weight: normal;
  font-display: swap;
  text-rendering: optimizeLegibility;
}

* {
  box-sizing: border-box;
  overflow-wrap: break-word;
  word-wrap: break-word; /* legacy */
  word-break: break-word; /* for WebKit/Chrome */

  max-width: 100%;
  min-width: 0;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  font-family: "EB Garamond", serif;
  line-height: 1.5;
}

::selection {
  background-color: #6797d0;
  color: #fff;
}

h1, h2, h3, h4 {
  font-family: "Lato Heavy", sans-serif;
  font-weight: normal;
}

img {
  max-width: 100%;
  max-height: 100%;
  vertical-align: middle;
}

a {
  color: #316bb1;
}

a:hover {
  color: #000;
}

.inverted-link {
  color: #000
}

.inverted-link:hover {
  color: #316bb1;
}

.pageheader {
  margin: 0 auto;
  padding: .5rem;
}

.logo {
  text-align: center;
  margin: .5rem;
  text-decoration: none;
}

.logo a {
  text-decoration: none;
}

.logo img {
  height: 5rem;
}

.logo-text {
  margin-top: .3rem;
}

.logo-text .name {
  margin: 0;
  line-height: 1.3;
  font-size: 2em;
}

.logo .tagline {
  margin: 0;
  font-size: 1.2em;
}

@media screen and (min-width: 26rem) {
  .logo img,
  .logo-text {
    display: inline-block;
    vertical-align: middle;
  }

  .logo-text {
    text-align: left;
    margin-left: .5rem;
  }
}

.nav {
  margin-top: .5rem;
}

.nav ul {
  display: flex;
  flex-wrap: wrap;
  height: 100%;
  list-style: none;
  padding: 0;
  margin: 0;
  justify-content: center;
  align-items: center;
}

.nav li {
  padding: .3rem 1rem;
}

.nav .active {
  text-decoration: none;
  color: #316bb1;
}

.pager {
  display: flex;
  justify-content: space-between;
}

.pager .hidden {
  visibility: hidden;
}

.inline-icon img {
  width: 1rem;
  margin-right: .25rem;
  vertical-align: text-bottom;
}

.cover-image {
  margin-top: 2rem;
}

@media screen and (min-width: 69em) {
  .cover-image {
    width: 67em;
    border-radius: 10px;
    margin: 2rem 0 1rem;
  }
}

main {
  flex: 1;
  width: 100%;
  max-width: 40rem;
  padding: 0 .5rem;
}

footer {
  margin-top: 2rem;
  padding: 1rem;
  border-top: 1px solid #ddd;
  width: calc(100vw - 2rem);
}

footer .wrapper {
  margin: 0 auto;
  max-width: 40rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

footer .footer-img {
  max-width: 3rem;
  opacity: 0.7;
}

footer .admin {
  flex: 1;
  text-align: right;
}

footer .dummy {
  flex: 1;
}

footer .admin a {
  color: #bbb;
}

.post header h1,
.post header h2 {
  margin: 0;
}

.post header h2 a {
  text-decoration: none;
}

.published {
  font-size: .85em;
}

article.post ~ article.post {
  border-top: 1px solid #ddd;
}

article.post > header, article.post > h1 {
  margin: 1rem 0;
}

.landscape-image {
  border-radius: 7px;
  width: 100%;
  display: inline-block;
}

.landscape-image.truncate {
  max-height: 40vh;
  object-fit: cover;
}

.portrait-image {
  float: right;
  width: 30%;
  min-width: 5rem;
  border: 1px solid #ddd;
  margin: 0 0 0.8rem 1rem;
}

.event-detail {
  padding: .5rem;
  border: 1px solid #ddd;
  border-radius: 7px;
  clear: both;
}

.event-detail p {
  margin: 0;
}

.event-detail time.hidden {
  display: none;
}

address.contact {
  font-style: normal;
}

address hr {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

hr {
  border: 0;
  height: 1px;
  background-color: #ddd;
  width: 75%;
  max-width: 30rem;
}

.postal-address {
  font-style: italic;
}

.postal-address,
.payment-info {
  text-align: center;
}

.table {
  overflow-x: auto;
  border-radius: 7px;
  background-color: #f3f3f3;
  border: 1px solid #ddd;
}

.table table {
  width: 100%;
  border-collapse: collapse;
}

.table th,
.table td {
  white-space: nowrap;
  height: 2rem;
  padding: 0 10px 0 10px;
}

.flashes {
  max-width: 40rem;
  align-self: center;
  text-align: center;
  list-style: none;
  margin: 1rem 1rem;
  padding: 0;
}
.flash {
  min-width: 10rem;
  padding: .5rem 1rem;
  margin: .5rem auto;
  border-radius: 7px;
}
.flash.success {
  background-color: #C9F7DD;
  border: 1px solid #62D895;
  color: #004D21;
}
.flash.info {
  background-color: #CBDEF5;
  border: 1px solid #6797D0;
  color: #042246;
}
.flash.warning {
  background-color: #FFF3CC;
  border: 1px solid #FFCF32;
  color: #332700;
}
.flash.error {
  background-color: #FFD9D0;
  border: 1px solid #FF9073;
  color: #6C1600;
}

